assets/argo/service-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-nodeport
  namespace: argocd
spec:
 type: NodePort
 ports:
 - protocol: TCP
   port: 8080
   nodePort: 30088
   targetPort: 8080
 selector:
   app.kubernetes.io/name: argocd-server
