assets/argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: argocd
  name: argo-nodeport

spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    nodePort: 30088
    targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
