assets/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-argo
  namespace: argocd
  # GKE ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "argo-static-ip"
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/v1beta1.FrontendConfig: lb-http-to-https

spec:
  rules:
  - host: argo.cachac.kubelabs2.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
